--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="C:\Users\DELL\Desktop\Condo-hunter\assets\css\main.css">
+	<link rel="stylesheet" href="C:\Users\DELL\Documents\GitHub\condo\css\style.css">
 
-	<link rel="stylesheet" href="C:\Users\DELL\Desktop\Condo-hunter\assets\css\slick.css">
+	<link rel="stylesheet" href="C:\Users\DELL\Documents\GitHub\condo\css\slick.css">
 
-	<link rel="stylesheet" href="C:\Users\DELL\Desktop\Condo-hunter\assets\css\slick-theme.css">
+	<link rel="stylesheet" href="C:\Users\DELL\Documents\GitHub\condo\css\slick-theme.css">
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -409,7 +409,7 @@
     crossorigin="anonymous"></script>
   
 
-<script type="text/javascript" src="C:\Users\DELL\Desktop\Condo-hunter\assets\css\slick-min.js"></script>
+<script type="text/javascript" src="C:\Users\DELL\Documents\GitHub\condo\css\slick-min.js"></script>
 
 
 
