--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="C:\Users\DELL\Documents\GitHub\condo\css\style.css">
+	<link rel="stylesheet" href="css\style.css">
 
 	<link rel="stylesheet" href="C:\Users\DELL\Documents\GitHub\condo\css\slick.css">
 
