--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 	 		<div class="footer-bottom-left">
 	 			<div class="playstore">
 	 				<a href=""><img src="images\android_btn-7b23155ac606e51ca06ee7eb405a8990207bfccd46798c593e946cd045681c6f.png"></a>
-	            <a href=""><img src="C:\Users\DELL\Desktop\Condo-hunter\assets\images\group-8-387fcc94aa4973613114042e291d297a2d696d913df9d94ff9590df306998af8.png"></a>
+	            <a href=""><img src="images\group-8-387fcc94aa4973613114042e291d297a2d696d913df9d94ff9590df306998af8.png"></a>
 	 			</div>
 	 		</div>
 
