--- a/index.html
+++ b/index.html
@@ -58,11 +58,13 @@
 
 	          <div class="banner-section-2">
 			          <div class="banner-content-2">
-				            <div class="banner-rectangle" >
+                  <img src="images\ractanle mobile.png" >
+
+				            <!-- <div class="banner-rectangle" >
 				            <img src="images\Rectangle 5.png" >
 				            </div>
 				            <div class="banner-mobile-image">
-				             <span class="ban-img-1" data-aos="fade-left"><img src="images\mobile.png"></span>
+				             <span class="ban-img-1" data-aos="fade-left"><img src="images\mobile.png"></span> -->
 				       </div>
 	          
 	          </div>
