--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 		    </div>
 	<div class="feature-card">
 		  <div class="box">	
-		      <div><img src="images\ranking.png">0<	/div>
+		      <div><img src="images\ranking.png"></div>
 		      <div> 
 		        <h5>Condo Rankings</h5>
 
