--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 
 <section id="feature">
- <div class="container">
+ <div class="feature container">
   <div class="feature-top-right">
  			  <h3 class="content-name">Features</h3>
                     <h2 class="content-heading">What We Offer</h2>
@@ -191,7 +191,7 @@
 
 
   <section id="testimonial">
- <div class="container">
+ <div class="testimonial-container">
          <div class="testimonial-top-right">
  			  <h3 class="content-name">Testimonials</h3>
                     <h2 class="content-heading">Our Happy Clients</h2>
