--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
  		    <div class="footer-top-left">
  			  <h3 class="footer-name">Condo Hunter</h3>
                     <h2 class="footer-heading">Download Our App</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do </p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     <a href="" class="footer-btn"><span>Get Started &nbsp;<i class="fa fa-arrow-right"></i></span></a>
 	 		</div>
 	 		<div class="footer-top-right ">
