--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 	      <div class="box">	
 	      <div><img src="images\homes.png"></div>
 	      <div> 
-	        <h5>Building and Neighborhood<br> Profiles</h5>
+	        <h5>Building and <br>Neighborhood Profiles</h5>
 
 	      </div>
 	      </div>
