--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <div class="box">
 		      <div><img src="images\homes.png"></div>
 		      <div> 
-		        <h5>Compehensive Property Search</h5>
+		        <h5>Compehensive <br>Property Search</h5>
 		        
 		      </div>
 		      </div>	
