--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+
+  <link href="https://www.dafontfree.net/embed/YW5naWUtYm9sZCZkYXRhLzIyL2EvMTEwODk3L0FuZ2llQm9sZC50dGY" rel="stylesheet" type="text/css"/>
  
 
 	<title>Condo-Hunter</title>
