--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 	          <div class="banner-section-2">
 			          <div class="banner-content-2">
-                  <img src="images\gradient-img.png" >
+                  <img src="images\gradientimg.png" >
 
 				            <!-- <div class="banner-rectangle" >
 				            <img src="images\Rectangle 5.png" >
