--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <div class="banner-section">
     <div class="banner">
           <div class="banner-section-1 ">
-	          <div class="banner-content ">
+	          <div class="banner-content" data-aos="fade-left>
 	            <h1>Your Hunt Is Over!</h1>
 	            <p>With a clean and user-friendly interface, Condo Hunter is the most efficient way to find your next condo</p>
 	            <a href=""><img src="images\android_btn-7b23155ac606e51ca06ee7eb405a8990207bfccd46798c593e946cd045681c6f.png"></a>
