--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="banner-section-1 ">
     	          <div class="banner-content" data-aos="fade-left">
     	            <h1>Your Hunt Is Over!</h1>
-    	            <p>With a clean and user-friendly interface, Condo Hunter is the most efficient way to find your next condo</p>
+    	            <p>With a clean and user-friendly interface, Condo Hunter is the most<br> efficient way to find your next condo</p>
     	            <a href=""><img src="images\android_btn-7b23155ac606e51ca06ee7eb405a8990207bfccd46798c593e946cd045681c6f.png"></a>
     	            <a href=""><img src="images\group-8-387fcc94aa4973613114042e291d297a2d696d913df9d94ff9590df306998af8.png"></a>
     	            
