--- a/index.html
+++ b/index.html
@@ -215,25 +215,25 @@
       </div>
     </div>
     <div class="testimonial-card">
-      <div><img src="images\userimage1.png"></div>
+      <div><img src="images\username-1.png"></div>
       <div> 
-        <h5>User Name 1</h5>
+        <h5>User Name 2</h5>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
         
 
       </div>
     </div>
     <div class="testimonial-card">
-      <div><img src="images\testiimage2.png"></div>
+      <div><img src="images\username-2.png"></div>
       <div> 
-        <h5>User Name 1</h5>
+        <h5>User Name 3</h5>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
         
 
       </div>
     </div>
     <div class="testimonial-card">
-      <div><img src="images\testiimage3.png"></div>
+      <div><img src="images\username-3.png"></div>
       <div> 
         <h5>User Name 1</h5>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
