--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
 
   <link href="https://www.dafontfree.net/embed/YW5naWUtYm9sZCZkYXRhLzIyL2EvMTEwODk3L0FuZ2llQm9sZC50dGY" rel="stylesheet" type="text/css"/>
+
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.2/css/all.css">
   
   
 
@@ -27,7 +29,7 @@
 <body>
 
 
-	<div id="container">
+<!-- 	<div id="container">
         <nav id="navbar">
             <div class="logo" data-aos="fade-down-right">
                 <a href="index.html"><img src="images\Logo_nav.png"></a>
@@ -46,8 +48,27 @@
 
         </nav>
     </div>
+ -->
 
+<header>
+        <div class="brand-logo">
+            <a href="#"><img src="https://www.markuptag.com/images/white-logo-icon.png" alt="Brand Logo"></a>
+        </div>
 
+        <input type="checkbox" id="toggle-btn">
+        <label for="toggle-btn" class="show-menu-btn"><i class="fas fa-bars"></i></label>
+
+        <nav>
+            <ul class="navigation">
+                <li><a href="#"><i class="fas fa-house-damage"></i> Home</a></li>
+                <li><a href="#"><i class="far fa-image"></i> Gallery</a></li>
+                <li><a href="#"><i class="fab fa-blogger-b"></i> Blog</a></li>
+                <li><a href="#"><i class="fas fa-question"></i> Support</a></li>
+                <li><a href="#"><i class="fas fa-phone-alt"></i> Contact Us</a></li>
+                <label for="toggle-btn" class="hide-menu-btn"><i class="fas fa-times"></i></label>
+            </ul>
+        </nav>
+    </header>
 
 
 
