--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
 
 
 <div class="topnav" id="myTopnav">
+  <div class="logo" data-aos="fade-down-right">
+                <a href="index.html"><img src="images\Logo_nav.png"></a>
+            </div>
   <a href="#home" class="active">Home</a>
   <a href="#news">News</a>
   <a href="#contact">Contact</a>
