--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 
-<!-- 
+
 	<div id="container">
         <nav id="navbar">
             <div class="logo" data-aos="fade-down-right">
@@ -47,7 +47,7 @@
             </ul>
 
         </nav>
-    </div> -->
+    </div>
 
 
 
@@ -55,10 +55,16 @@
   <div class="logo" data-aos="fade-down-right">
                 <a href="index.html"><img src="images\Logo_nav.png"></a>
             </div>
-  <a href="#home" class="active">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
+  <ul>
+                <li class="list-item"><a href="index.html" class="active">Home</a></li>
+                <li class="list-item"><a href="portfolio.html">Features</a></li>
+                <li class="list-item"><a href="about.html">Content</a></li>
+                <li class="list-item"><a href="about.html">Testimonials</a></li>
+               
+                <li class="list-item "><a href="contact.html"><button class="app-btn">Download App</button></a></li>
+             
+
+            </ul>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
