--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
 
 
-	<div id="container">
+<!-- 	<div id="container">
         <nav id="navbar">
             <div class="logo" data-aos="fade-down-right">
                 <a href="index.html"><img src="images\Logo_nav.png"></a>
@@ -47,7 +47,7 @@
             </ul>
 
         </nav>
-    </div>
+    </div> -->
 
 
 
