--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
 
 
-<!-- 	<div id="container">
+	<div id="container">
         <nav id="navbar">
             <div class="logo" data-aos="fade-down-right">
                 <a href="index.html"><img src="images\Logo_nav.png"></a>
@@ -47,40 +47,7 @@
             </ul>
 
         </nav>
-    </div> -->
-
-
-
-<div class="topnav" id="myTopnav">
-  <div class="logo" data-aos="fade-down-right">
-                <a href="index.html"><img src="images\Logo_nav.png"></a>
-            </div>
-  <ul>
-                <li class="list-item"><a href="index.html" class="active">Home</a></li>
-                <li class="list-item"><a href="portfolio.html">Features</a></li>
-                <li class="list-item"><a href="about.html">Content</a></li>
-                <li class="list-item"><a href="about.html">Testimonials</a></li>
-               
-                <li class="list-item "><a href="contact.html"><button class="app-btn">Download App</button></a></li>
-             
-
-            </ul>
-  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-    <i class="fa fa-bars"></i>
-  </a>
-</div>
-
-<script>
-function myFunction() {
-  var x = document.getElementById("myTopnav");
-  if (x.className === "topnav") {
-    x.className += " responsive";
-  } else {
-    x.className = "topnav";
-  }
-}
-</script>
-
+    </div>
 
 
 	
