--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <h2 class="content-heading">Our Happy Clients</h2>
                                         
       </div>
-  <div class="testi-card-slider-mobile">
+  <div class="testi-card-slider
     <div class="testimonial-card">
       <div><img src="images\clipboard.png"></div>
       <div> 
