--- a/index.html
+++ b/index.html
@@ -161,14 +161,14 @@
 
  </section>
 
- <section id="testimonial">
+ <section id="testimonial-feature">
  <div class="testimonial-container">
          <div class="testimonial-top-right">
         <h3 class="content-name">Testimonials</h3>
                     <h2 class="content-heading">Our Happy Clients</h2>
                                         
       </div>
-  <div class="testi-card-slider
+  <div class="testi-card-slider">
     <div class="testimonial-card">
       <div><img src="images\clipboard.png"></div>
       <div> 
