--- a/index.html
+++ b/index.html
@@ -164,8 +164,9 @@
  <section id="testimonial-feature">
  <div class="testimonial-container">
          <div class="testimonial-top-right">
-        <h3 class="content-name">Testimonials</h3>
-                    <h2 class="content-heading">Our Happy Clients</h2>
+        <h3 class="content-name">Features</h3>
+                    <h2 class="content-heading">What We Offer</h2>
+                    <p style="text-align: center;">From pricing your home to fielding offers, get the tools and support you need.</p>
                                         
       </div>
   <div class="testi-card-slider">
