--- a/index.html
+++ b/index.html
@@ -50,6 +50,27 @@
     </div>
 
 
+      <header>
+        <div class="brand-logo">
+            <a href="#"><img src="https://www.markuptag.com/images/white-logo-icon.png" alt="Brand Logo"></a>
+        </div>
+
+        <input type="checkbox" id="toggle-btn">
+        <label for="toggle-btn" class="show-menu-btn"><i class="fas fa-bars"></i></label>
+
+        <nav>
+            <ul class="navigation">
+                <li><a href="#"><i class="fas fa-house-damage"></i> Home</a></li>
+                <li><a href="#"><i class="far fa-image"></i> Gallery</a></li>
+                <li><a href="#"><i class="fab fa-blogger-b"></i> Blog</a></li>
+                <li><a href="#"><i class="fas fa-question"></i> Support</a></li>
+                <li><a href="#"><i class="fas fa-phone-alt"></i> Contact Us</a></li>
+                <label for="toggle-btn" class="hide-menu-btn"><i class="fas fa-times"></i></label>
+            </ul>
+        </nav>
+    </header>
+
+
 	
 
   <div class="banner-section">
