--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       <header>
         <div class="brand-logo">
-            <a href="#"><img src="https://www.markuptag.com/images/white-logo-icon.png" alt="Brand Logo"></a>
+            <a href="#"><img src="images\Logo_nav.png" alt="Brand Logo"></a>
         </div>
 
         <input type="checkbox" id="toggle-btn">
