--- a/index.html
+++ b/index.html
@@ -60,12 +60,11 @@
 
         <nav>
             <ul class="navigation">
-                <li><a href="#"><i class="fas fa-house-damage"></i> Home</a></li>
-                <li><a href="#"><i class="far fa-image"></i> Gallery</a></li>
-                <li><a href="#"><i class="fab fa-blogger-b"></i> Blog</a></li>
-                <li><a href="#"><i class="fas fa-question"></i> Support</a></li>
-                <li><a href="#"><i class="fas fa-phone-alt"></i> Contact Us</a></li>
-                <label for="toggle-btn" class="hide-menu-btn"><i class="fas fa-times"></i></label>
+                 <li class="list-item"><a href="index.html" class="active">Home</a></li>
+                <li class="list-item"><a href="portfolio.html">Features</a></li>
+                <li class="list-item"><a href="about.html">Content</a></li>
+                <li class="list-item"><a href="about.html">Testimonials</a></li>
+                <label for="toggle-btn" class="hide-menu-btn"><i class="fa fa-times"></i></label>
             </ul>
         </nav>
     </header>
