--- a/index.html
+++ b/index.html
@@ -448,6 +448,10 @@
   ]
     });
 
+    
+  </script>
+
+  <script type="text/javascript">
     $('.testi-card-slider').slick({
       slidesToShow: 3,
         slidesToScroll: 3,
