--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 	 		</div>
   <div class="testi-card-slider">
     <div class="testimonial-card">
-      <div><img src="images\testiimage3.png"></div>
+      <div><img src="images\username-3.png"></div>
       <div> 
         <h5>User Name 1</h5>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
