--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                 <li class="list-item"><a href="portfolio.html">Features</a></li>
                 <li class="list-item"><a href="about.html">Content</a></li>
                 <li class="list-item"><a href="about.html">Testimonials</a></li>
+                <li class="list-item "><a href="contact.html"><button class="app-btn">Download App</button></a></li>
                 <label for="toggle-btn" class="hide-menu-btn"><i class="fa fa-times"></i></label>
             </ul>
         </nav>
